--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <meta property="og:title" content="Cubist Inspired Portraits" />
     <meta property="og:description" content="Create artistic portraits by combining pre-made facial elements with freehand drawing capabilities." />
     <meta property="og:image" content="/icons/og-image.png" />
-    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:url" content="https://yourdomain.com" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
